		...

	Significant Changes
		Changed Primary Assessment Scale to Default Assessment Scale

	Security
		...

	Tweaks & Bug Fixes
		System: fixed sql loading issue in trans class
		System: enabled Smart Workflow Help for newly added staff
		System: turned on Smart Workflow help for admin user created during install
		Markbook: added settings to enable/disable Effort and Rubrics
		School Admin: fixed timezone issue in managing special days
		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
		Students: fixed PHP Notice bug in Student Enrolment Add screen
		User Admin: fixed PHP Notice issue in user import


v12.0.00
--------
	Headlines
		New markbook configuration to allow weighting and total score calculation for all suitable columns in class
		New interface for defining interface string substitutions, along for custom language tweaks
		PHP 7 compatible
		Dashboards, with hooks, for staff and students
		New workflows for advertising job openings, accepting and processing applications
		Complete Dutch translation ("dank je" to Vic Mortelmans and Kris Clauw)

	Changes With Important Notices
		System: initial phase of object oriented PHP rewrite: expect errors during upload of the update.
		Students: moved student application form from its own module into Students
		Students: moved application form management from User Admin to Students module
		Students: moved student enrolment from User Admin to Students module
		Students: moved medical form management from User Admin to Students module

	Significant Changes
		System: replaced float with version_compare, fixing cases where minor (system and module) updates could not be installed.
		System: improved return message handling
		System: link to Edit shown to user after new record is added
		System: beautified code base to align more closely with standard PHP syntax