@@ -35,6 +35,7 @@ v13.0.00
 		System: enabled Smart Workflow Help for newly added staff
 		System: turned on Smart Workflow help for admin user created during install
 		Markbook: added settings to enable/disable Effort and Rubrics
+		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
 		School Admin: fixed timezone issue in managing special days
 		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
 		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
